--- a/Autoencoder for dimensionality reduction.ipynb
+++ b/Autoencoder for dimensionality reduction.ipynb
@@ -6841,7 +6841,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Silhouette sceore goes from (-1,1), where 1 means the points are assigned well to the clusters"
+    "# Silhouette score goes from (-1,1), where 1 means the points are assigned well to the clusters; -1 means poor clustering"
    ]
   },
   {
@@ -6861,7 +6861,7 @@
     }
    ],
    "source": [
-    "# Silhouette of data:\n",
+    "# Silhouette score of data:\n",
     "silhouette_score(X_train, y_train)"
    ]
   },
@@ -6903,7 +6903,7 @@
     }
    ],
    "source": [
-    "# Silhouette of autoencoder -- find better represenation of clusters than the data itself:\n",
+    "# Silhouette score of autoencoder -- it finds better represenation of clusters than the data itself:\n",
     "silhouette_score(res_ae, y_test)"
    ]
   },
